--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
  border-bottom-style: solid;
 }
 .fixed-top{
-   background-image: url("../images/IMG_4946.jpg");
+   background-image: url("../images/img_4946.jpg");
  
 }
 .my-linel{
@@ -44,7 +44,7 @@ body{
 }
 .my-bg{ 
   
-  background-image: url("../images/IMG_4946.jpg");
+  background-image: url("../images/img_4946.jpg");
 }
   
 .my-box {
